thanos/dev/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:   
 #   cert-manager.io/issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: nginx
spec: 
  # tls:
  # - host: 
  #   - kube.ms.techwithpratik.tech
  #   secretName: ms-techwithpratik-tech-tls
  rules:
  # - host: kube.ms.techwithpratik.tech
  #   http:
  #     paths:
  #       - backend:        
  #           service:
  #             name: prometheus
  #             port:
  #               number: 9090  
  #         path: /
  #         pathType: Prefix         

  - host: kube.ms.techwithpratik.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
